--- a/app/src/main/res/layout/activity_base_drawer.xml
+++ b/app/src/main/res/layout/activity_base_drawer.xml
@@ -7,7 +7,7 @@
 
     <!-- The main content view -->
 
-    <include layout="@layout/app_bar_main" android:layout_width="match_parent"
+    <include layout="@layout/activity_base_toolbar" android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <!-- The navigation drawer -->
