--- a/app/src/main/res/layout/fragment_hello_world.xml
+++ b/app/src/main/res/layout/fragment_hello_world.xml
@@ -9,17 +9,26 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.AppCompatEditText
-        android:id="@+id/et_name"
+
+    <TextView
+        android:id="@+id/tv_guide"
+        android:text="@string/hello_world_guide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/tv_hello_name"
-        android:text="Hello World!"
+    <android.support.v7.widget.AppCompatEditText
+        android:id="@+id/et_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/et_name"/>
+        android:layout_below="@+id/tv_guide"/>
+
+    <TextView
+        android:id="@+id/tv_hello_name"
+        android:text="@string/hello_world"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/et_name"
+        android:visibility="gone"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
